--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -2,18 +2,31 @@
 {% load static %}
 {% block content %}
     
-<div class="row align-items-center me-0 bg-img" >
-                <div class="col-lg-7 col-md-7" style=";border-radius:10px,10px,10px,10px; ">
-                    <h3 class="text-dark ms-3 animated-text"><span>Unlock</span> <span>Growth</span> <span>Potential</span> <span>with</span> <span>Free</span> <span>Consulting</span> <span>from</span> <span>Industry</span> <span>Experts!</span></h3>
-                    <h5 style="color:#17C3B2" class="ms-3">Struggling to Grow or Just Starting Out? We’re Your Business Partner<br> for Rapid Growth in India and Beyond.</h5>
-                    <p class="text-dark mt-4 ms-3">We offer end-to-end marketing and business strategy solutions through strong social media presence,<br> serving clients across India and globally (including the Middle East (Dubai), <br>Australia, Canada, Singapore, Africa, and more).</p>
-                    
-                </div>
-           <div class="col-lg-5 col-md-5 image-container">
-              <img src="{% static 'image/expressive-young-lady-posing-studio-removebg-preview.png' %}"  alt="Big Image"class="img-fluid w-100 animated-image" style="max-height: 500px; object-fit: cover;">
-           </div>
+<div class="row align-items-center me-0 bg-img">
+  <div class="col-lg-7 col-md-7" style="border-radius: 10px;">
+    <h3 class="text-dark ms-3 animated-text">
+      <span>Unlock</span> <span>Growth</span> <span>Potential</span>
+      <span>with</span> <span>Free</span> <span>Consulting</span>
+      <span>from</span> <span>Industry</span> <span>Experts!</span>
+    </h3>
+    <h5 class="ms-3 text-success subheading-animate">
+      Struggling to Grow or Just Starting Out? We’re Your Business Partner<br>
+      for Rapid Growth in India and Beyond.
+    </h5>
+    <p class="text-dark mt-4 ms-3 para-animate" style="font-size: 18px;">
+      We offer end-to-end marketing and business strategy solutions through strong
+      social media presence, serving clients across India and globally (including the Middle East (Dubai),
+      <br>Australia, Canada, Singapore, Africa, and more).
+    </p>
+  </div>
+  <div class="col-lg-5 col-md-5 image-container">
+    <img src="{% static 'image/expressive-young-lady-posing-studio-removebg-preview.png' %}"
+         alt="Big Image"
+         class="img-fluid w-100 animated-image"
+         style="max-height: 500px; object-fit: cover;">
+  </div>
+</div><br><br>
 
-        </div><br><br>
         <div class="container">
         <div class="slider-wrapper justify-content-center me-0">
   
