--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -28,7 +28,7 @@
 </div><br><br>
 
         <div class="container">
-        <div class="slider-wrapper justify-content-center me-0">
+        <div class="slider-wrapper col-lg-12 col-md-12  me-0">
   
          <button class="nav-button prev-btn" onclick="prevSlide()">&#10094;</button>
         <div class="slider" id="customSlider">
