Fix ALLOWED_HOSTS for Render

--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -15,8 +15,8 @@
     </h5>
     <p class="text-dark mt-4 ms-3 para-animate" style="font-size: 18px;">
       We offer end-to-end marketing and business strategy solutions through strong
-      social media presence, serving clients across India and globally (including the Middle East (Dubai),
-      <br>Australia, Canada, Singapore, Africa, and more).
+      social media presence, serving clients across India and globally<br> (including the Middle East (Dubai),
+      Australia, Canada, Singapore, Africa, and more).
     </p>
   </div>
   <div class="col-lg-5 col-md-5 image-container">
@@ -84,7 +84,7 @@
 
 
                             </p>
-                            <a href="#"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
+                            <a href="{% url "my_app:web" %}"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
                         </div>
                     </div>
                 </div>
