--- a/templates/layout.html
+++ b/templates/layout.html
@@ -282,7 +282,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url "my_app:about" %}">Search Engine optimisation</a></li>
-                                <li><a class="dropdown-item" href="#">Website Development</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:web" %}">Website Development</a></li>
                                 <li><a class="dropdown-item" href="#">Google My Business Listing</a></li>
                                 <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
                                 <li><a class="dropdown-item" href="#">Content Writing</a></li>
