--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -99,7 +99,7 @@
                                     and drive real results across all major platforms.
 
                             </p>
-                            <a href="#"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
+                            <a href="{% url "my_app:media" %}"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
                         </div>
                     </div>
                 </div>
