--- a/my_app/templates/my_app/smm.html
+++ b/my_app/templates/my_app/smm.html
@@ -5,7 +5,6 @@
 .smm-box {
   padding: 40px 50px;
   filter:drop-shadow:20px 20px 20px #23a6d5;
-  border-radius:10px;
   color: white;
   text-align: center;
   box-shadow: 0 0 30px rgba(255, 255, 255, 0.2);
@@ -84,7 +83,7 @@ h2{
 .smm-title {
   font-size: 2.2rem;
   margin-bottom: 40px;
-  animation: fadeSlideDown 1s ease-out;
+  animation: fadeSlideDown 2s ease-out;
 }
 
 .smm-cards {
@@ -105,7 +104,7 @@ h2{
   overflow: hidden;
   animation: popIn 0.8s ease forwards;
   filter: drop-shadow(0 5px 15px rgba(0, 0, 0, 0.2));
-  backdrop-filter: blur(5px);
+  backdrop-filter: brightness(0.8);
 }
 
 .smm-card h3 {
@@ -170,7 +169,7 @@ h2{
   </div>
 </div>
 <div class="smm-section">
-  <h2 class="smm-title">📣 Social Media Marketing Services</h2>
+  <h2 class="smm-title me-0">📣 Social Media Marketing Services</h2>
   <div class="smm-cards">
     
     <div class="smm-card">
