--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% load static %}
+{% block title  %}Home{% endblock  %}
 {% block content %}
     
 <div class="row align-items-center me-0 bg-img">
