--- a/my_app/templates/my_app/smm.html
+++ b/my_app/templates/my_app/smm.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% load static %}
+{% block title %}Social Media Marketing{% endblock  %}
 {% block content %}
 <style>
 .smm-box {
