--- a/my_app/templates/my_app/web.html
+++ b/my_app/templates/my_app/web.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% load  static  %}
+{% block title %}website development{% endblock  %}
 {% block content %}
 <style>
 * {
