--- a/my_app/templates/my_app/seo.html
+++ b/my_app/templates/my_app/seo.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% load static %}
+{% block title %}Search engine optimisation{% endblock  %}
 {% block content %}
 <style>
   .full-bg-wrapper {
