--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>frontpage</title>
+    <title>{% block title %}layout{% endblock %}</title>
     <style>
         body{
             margin:0px;
