--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -1,6 +1,20 @@
 {% extends "layout.html" %}
 {% load static %}
-{% block title %}Contact{% endblock  %} 
+{% block title %}Contact{% endblock  %}
+<style>
+    *{
+        margin:0;
+        padding:0;
+        box-sizing:content-box;
+    }
+    
+    
+</style> 
 {% block content %}
+
+    <div class="back-img w-100"> 
+            <img src="https://vaneritrea.com/wp-content/uploads/2023/10/contact-us-text-on-wooden-cubes-on-a-blue-background-wooden-cube-symbol-telephone--scaled.jpg" alt="contact us" width="100%" height="300px">
+    </div>
+
 
 {% endblock %}
