--- a/templates/layout.html
+++ b/templates/layout.html
@@ -348,7 +348,7 @@
                             <a class="nav-link " href="#" style="color:#063970;"><b>Partner programs</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="#" style="color:#063970;"><b>Contact us</b></a>
+                            <a class="nav-link " href="{% url "my_app:contact" %}" style="color:#063970;"><b>Contact us</b></a>
                         </li>
                         
                         
@@ -403,7 +403,7 @@
                     <li ><a href="{% url 'my_app:home_two' %}">Home</a></li>
                     <li ><a href="#">About Us</a></li>
                     <li ><a href="#">Services</a></li>
-                    <li ><a href="#">Contact</a></li>
+                    <li ><a href="{% url "my_app:contact" %}">Contact</a></li>
                     <li ><a href="#">Blog</a></li>
                     
                 </ul>
