--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -11,10 +11,33 @@
     
 </style> 
 {% block content %}
-
     <div class="back-img w-100"> 
             <img src="https://vaneritrea.com/wp-content/uploads/2023/10/contact-us-text-on-wooden-cubes-on-a-blue-background-wooden-cube-symbol-telephone--scaled.jpg" alt="contact us" width="100%" height="300px">
     </div>
 
+<form class="ms-2">
+    <div class="mt-5">
+    <div class="heading">
+        <h1>Contact Us</h1>
+    </div>
+    <div class="col-lg-3 col-md-3">
+        <h5>Name</h5>
+        <input type="text" placeholder="Enter your name" >
+    </div>
+    
+    <div class="col-lg-3 col-md-3 mt-1">
+        <h5>Email Address</h5>
+        <input type="email" placeholder="Enter your email" >
+    </div>
+    <div class="col-lg-3 col-md-3 mt-1">
+        <h5>Phone no.</h5>
+        <input type="number" placeholder="Enter your contact no." >
+    </div>
+    <div class="col-lg-3 col-md-3 mt-1">
+        <h5>Message</h5>
+        <input type="text" placeholder="Message">
+    </div>
+</div>
+</form>
 
 {% endblock %}
