--- a/my_app/templates/my_app/smm.html
+++ b/my_app/templates/my_app/smm.html
@@ -168,7 +168,7 @@ h2{
       Facebook • Instagram • Twitter • LinkedIn • YouTube • Pinterest • Snapchat • Facebook • Instagram • Twitter • LinkedIn •
     </div>
   </div>
-</div>
+</div><br><br>
 <div class="smm-section">
   <h2 class="smm-title me-0">📣 Social Media Marketing Services</h2>
   <div class="smm-cards">
