--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -7,12 +7,12 @@
         padding:0;
         box-sizing:content-box;
     }
-    
+   
     
 </style> 
 {% block content %}
     <div class="back-img w-100"> 
-            <img src="https://vaneritrea.com/wp-content/uploads/2023/10/contact-us-text-on-wooden-cubes-on-a-blue-background-wooden-cube-symbol-telephone--scaled.jpg" alt="contact us" width="100%" height="300px">
+            <img src="https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/k-32-nat-1124-olj1553-2-contactus.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=98615933be7d660348bca297b128d269" alt="contact us" width="100%" height="300px">
     </div>
 
 <form class="ms-2">
