link add commit

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -415,7 +415,7 @@
                     <li ><a href="{% url "my_app:web" %}" style="margin-left:-30px;">Website Development</a></li>
                     <li ><a href="#" style="margin-left:-30px;">Online Advertising</a></li>
                     <li ><a href="#" style="margin-left:-30px;">influence Marketing</a></li>
-                    <li ><a href="#" style="margin-left:-30px;">Search Engine otimisation</a></li>
+                    <li ><a href="{% url "my_app:about" %}" style="margin-left:-30px;">Search Engine otimisation</a></li>
                     
                 </ul>
             </div>
