add link commit

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -320,8 +320,17 @@
                             </ul>
                         </li>
                         
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:#063970;"><b>Portfolio</b></a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" style="color:#063970;"href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <b>Portfolio</b></a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="#">Creatives</a></li>
+                                <li><a class="dropdown-item" href="#">Video Ads</a></li>
+                                <li><a class="dropdown-item" href="#">Influencer Ads</a></li>
+                                <li><a class="dropdown-item" href="#">Web design</a></li>
+                                <li><a class="dropdown-item" href="#">Logo design</a></li>
+                                <li><a class="dropdown-item" href="#">Testimonials</a></li>
+                            </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="#" style="color:#063970;"><b>Blog</b></a>
