--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -141,7 +141,7 @@
                         to your brand voice and audience. 
 
                      </p>
-                        <a href="#"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
+                        <a href="{% url "my_app:content" %}"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
                         </div>
                     </div>
                 </div>
