--- a/templates/layout.html
+++ b/templates/layout.html
@@ -315,7 +315,7 @@
                                 <li><a class="dropdown-item" href="{% url "my_app:web" %}">Website Development</a></li>
                                 <li><a class="dropdown-item" href="#">Google My Business Listing</a></li>
                                 <li><a class="dropdown-item" href="#">Pay Per Click</a></li>
-                                <li><a class="dropdown-item" href="#">Content Writing</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:content" %}">Content Writing</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:media" %}">Social Media Marketing</a></li>
                             </ul>
                         </li>
