--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -127,7 +127,7 @@
                         <p class="card-text">Results-Driven PPC Services
                         We run targeted PPC ads to help you reach the right audience,
                          get more leads, and grow your business—fast and within budget.</p>
-                         <a href="#"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
+                         <a href="{% url "my_app:pay" %}"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
                         </div>
                     </div>
                 </div>
