--- a/my_app/templates/my_app/index.html
+++ b/my_app/templates/my_app/index.html
@@ -115,7 +115,7 @@
                             From accurate information to reviews and photos.
 
 </p>
-                        <a href="#"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
+                        <a href="{% url "my_app:gmb" %}"><button type="button" class="btn btn-info w-100"><b>Show More</b></button></a>
                         </div>
                     </div>
                 </div>
