--- a/my_app/templates/my_app/ppc.html
+++ b/my_app/templates/my_app/ppc.html
@@ -26,7 +26,7 @@
 
 .ppc-title {
   font-size: 2.5rem;
-  color:rgb(224, 231, 238);
+  color:white;
   margin-bottom: 10px;
   font-weight: bold;
 }
@@ -131,7 +131,7 @@
   }
 
   window.addEventListener("scroll", revealOnScroll);
-  revealOnScroll(); // Reveal on load
+  revealOnScroll(); 
 });
 
 </script>
