--- a/templates/layout.html
+++ b/templates/layout.html
@@ -313,7 +313,7 @@
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="{% url "my_app:about" %}">Search Engine optimisation</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:web" %}">Website Development</a></li>
-                                <li><a class="dropdown-item" href="#">Google My Business Listing</a></li>
+                                <li><a class="dropdown-item" href="{% url "my_app:gmb" %}">Google My Business Listing</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:pay" %}">Pay Per Click</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:content" %}">Content Writing</a></li>
                                 <li><a class="dropdown-item" href="{% url "my_app:media" %}">Social Media Marketing</a></li>
