--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -2,42 +2,145 @@
 {% load static %}
 {% block title %}Contact{% endblock  %}
 <style>
-    *{
-        margin:0;
-        padding:0;
-        box-sizing:content-box;
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .map {
+    width: 100%;
+    height: 300px;
+    border: none;
+  }
+
+  .card-body {
+    padding: 20px;
+  }
+
+  .info-row {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    gap: 10px;
+    flex-wrap: wrap;
+  }
+
+  .info-row svg {
+    flex-shrink: 0;
+    color: black;
+  }
+
+  .info-row span,
+  .info-row p {
+    margin: 0;
+    color: black;
+  }
+
+  @media (max-width: 768px) {
+    .map {
+      height: 200px;
     }
-   
-    
-</style> 
+
+    .info-row {
+      flex-direction: row;
+      align-items: flex-start;
+    }
+
+    .info-row span {
+      flex: 1;
+    }
+  }
+</style>
 {% block content %}
-    <div class="back-img w-100"> 
-            <img src="https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/k-32-nat-1124-olj1553-2-contactus.jpg?w=1200&h=1200&dpr=1&fit=clip&crop=default&fm=jpg&q=75&vib=3&con=3&usm=15&cs=srgb&bg=F4F4F3&ixlib=js-2.2.1&s=98615933be7d660348bca297b128d269" alt="contact us" width="100%" height="300px">
-    </div>
+<div class="row row-cols-1 row-cols-md-3 g-4 mt-5 me-0">
 
-<form class="ms-2">
-    <div class="mt-5">
-    <div class="heading">
-        <h1>Contact Us</h1>
+  <!-- Development Center -->
+  <div class="col">
+    <div class="card">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d112071.03445292752!2d77.384044!3d28.623173!3m2!1i1024!2i768!4f13.1!2m1!1sSuite%3A402%2C%20H-149%20Sector%2063%2C%20Noida%2C%20India!5e0!3m2!1sen!2sus!4v1752229221438!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
+      <div class="card-body">
+        <h5 class="card-title text-center"><b>Development Center</b></h5>
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-geo-alt-fill colorchange" viewBox="0 0 16 16"style="color:black;" >
+            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+          </svg>
+          <span>Suite:402, H-149 Sector 63,<br>Noida, India (201301)</span>
+        </div>
+
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+        </svg>
+          <span>sales@neemkarolitechnologies.com</span>
+        </div>
+
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+          <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+          </svg>
+          <span>2345567789</span>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-3">
-        <h5>Name</h5>
-        <input type="text" placeholder="Enter your name" >
+  </div>
+
+  <!-- Training Center -->
+  <div class="col">
+    <div class="card">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d111340.83365782215!2d79.48828549271734!3d29.29990926641026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sNeemkaroli%20House%2C%20Haldwani%20Uttarakhand%20%3A%20262139!5e0!3m2!1sen!2sus!4v1752228521667!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
+      <div class="card-body">
+        <h5 class="card-title text-center"><b>Training Center</b></h5>
+
+        <div class="info-row">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-geo-alt-fill " viewBox="0 0 16 16"style="color:black;" >
+        <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+        </svg>
+          <span class="text-center">Neemkaroli House,Haldwani,<br> Uttarakhand:262139</span>
+        </div>
+        <div class="info-row">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+        </svg>
+          <span class="mt-2">sales@neemkarolitechnologies.com</span>
+        </div>
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+          <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+          </svg>
+          <span class="mt-1">2345567789</span>
+        </div>
+      </div>
     </div>
-    
-    <div class="col-lg-3 col-md-3 mt-1">
-        <h5>Email Address</h5>
-        <input type="email" placeholder="Enter your email" >
+  </div>
+
+  <!-- Sales Office -->
+  <div class="col">
+    <div class="card">
+      <iframe class="map" src="https://www.google.com/maps/embed?pb=..." allowfullscreen loading="lazy"></iframe>
+      <div class="card-body">
+        <h5 class="card-title text-center"><b>Sales Office</b></h5>
+
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-geo-alt-fill colorchange" viewBox="0 0 16 16"style="color:black;" >
+            <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+          </svg>
+          <span>Unit 701, Mt Alexander Road,Moonee Ponds, Victoria, 3039</span>
+        </div>
+        <div class="info-row">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+        <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414zM0 4.697v7.104l5.803-3.558zM6.761 8.83l-6.57 4.027A2 2 0 0 0 2 14h12a2 2 0 0 0 1.808-1.144l-6.57-4.027L8 9.586zm3.436-.586L16 11.801V4.697z"/>
+        </svg>
+           <span>sales@neemkarolitechnologies.com</span>
+        </div>
+        <div class="info-row">
+          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill mt-1 colorchange" viewBox="0 0 16 16" style="color:black;">
+          <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+          </svg>
+           <span>+61 403 948 490</span>
+        </div>
+      </div>
     </div>
-    <div class="col-lg-3 col-md-3 mt-1">
-        <h5>Phone no.</h5>
-        <input type="number" placeholder="Enter your contact no." >
-    </div>
-    <div class="col-lg-3 col-md-3 mt-1">
-        <h5>Message</h5>
-        <input type="text" placeholder="Message">
-    </div>
+  </div>
 </div>
-</form>
-
-{% endblock %}
+{% endblock  %}
