--- a/my_app/templates/my_app/contact.html
+++ b/my_app/templates/my_app/contact.html
@@ -74,21 +74,14 @@
   transition: all 0.3s ease;
 }
 
-
-
 </style>
 {% block content %}
-
-
-<!-- Link Bootstrap and your custom CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 <div class="container py-5">
   <div class="row align-items-start">
-    
-  
     <div class="col-lg-6 mb-4">
       <h2 class="fw-bold">Reach Out, Get In Touch</h2>
       <p class="text-muted">
@@ -112,50 +105,37 @@
         </a>
       </div>
     </div>
-
-    
     <div class="col-lg-6 fade-in">
       <h3 class="mb-4">Have A Question?</h3>
       <form method="POST" action="#">
         {% csrf_token %}
-
         <div class="form-floating mb-3">
           {{ myData.name }}
           <label for="{{ myData.name.id_for_label }}">Full Name</label>
         </div>
-
         <div class="form-floating mb-3">
           {{ myData.email }}
           <label for="{{ myData.email.id_for_label }}">Email</label>
         </div>
-
         <div class="form-floating mb-3">
           {{ myData.phone }}
           <label for="{{ myData.phone.id_for_label }}">Mobile Number</label>
         </div>
-
         <div class="form-floating mb-3">
           {{ myData.designation }}
           <label for="{{ myData.designation.id_for_label }}">Designation</label>
         </div>
-
         <div class="form-floating mb-3">
           {{ myData.message }}
           <label for="{{ myData.message.id_for_label }}">Your Message</label>
         </div>
-
         <button class="btn btn-outline-dark btn-animate ">Submit</button>
       </form>
     </div>
-
   </div>
 </div>
 
-
-
-
-
-<div class="row row-cols-1 row-cols-md-3 g-4 mt-5 me-0">
+<div class="row row-cols-1 row-cols-md-3 g-4  me-0">
   <div class="col">
     <div class="card">
       <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m12!1m8!1m3!1d112071.03445292752!2d77.384044!3d28.623173!3m2!1i1024!2i768!4f13.1!2m1!1sSuite%3A402%2C%20H-149%20Sector%2063%2C%20Noida%2C%20India!5e0!3m2!1sen!2sus!4v1752229221438!5m2!1sen!2sus" allowfullscreen loading="lazy"></iframe>
