--- a/templates/layout.html
+++ b/templates/layout.html
@@ -333,7 +333,7 @@
                             <a class="nav-link " href="#" style="color:#063970;"><b>Blog</b></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="color:#063970;"><b>Career</b></a>
+                            <a class="nav-link" href="{% url "my_app:career" %}" style="color:#063970;"><b>Career</b></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link " href="#" style="color:#063970;"><b>Partner programs</b></a>
@@ -536,9 +536,6 @@
         </div>
 
         {% endblock %}
-                
-
-
 <footer>
     <div class="container-fluid mt-5" height="200" width="300">
         <div class="row col-lg-12 col-md-12 me-0 footer">
